# uwr_basics_of_graphics

./: .gitignore  Podstawy Grafiki Komputerowej.html
f16/: .directory  F16_BG.tga  F16_FUSE.tga  F16_FUSM.tga  F16_LS2.tga  F16_RTAI.tga  RUEDAB.tga  f16.blend  f16.blend1  f16.mtl  green.tga  white.tga
tutorial02/: CMakeLists.txt  tutorial02.cpp
tutorial02/lib/: libGLEW.so.1.9.0
zadanie2mastermind/zadanie2/: CMakeLists.txt  Makefile  SimpleVertexShader.vertexshader  main.cpp  vertex_data.cpp  vertex_data.hpp
zadanie2mastermind/zadanie2-build/: CMakeCache.txt  Makefile  cmake_install.cmake  mastermind  zadanie2.cbp
zadanie2mastermind/zadanie2/libs/: GLFW_276.lib
zadanie3arkanoid/zadanie3/: CMakeLists.txt  VertexShader.vertexshader  arkanoid_game.cpp  arkanoid_game.hpp  graphics_class.cpp  graphics_class.hpp  main.cpp
zadanie3arkanoid/zadanie3-build/: CMakeCache.txt  Makefile  arkanoid  cmake_install.cmake  zadanie3.cbp
zadanie4ludzik/zadanie4/: CMakeLists.txt  CMakeLists.txt.user.3.0-pre1  CMakeLists.txt.user.f18acb1  CMakeLists.txt.user.f18acb1.2.7pre1  VertexShader.vert  controls.cpp  crowd_class.cpp  crowd_class.hpp  graphics_class.cpp  graphics_class.hpp  main.cpp  person_class.cpp  person_class.hpp
zadanie4ludzik/zadanie4-build/: CMakeCache.txt
zadanie4ludzik/zadanie4/libs/: GLEW_190.lib
zadanie5mapa/zadanie5mapa/: CMakeLists.txt  ColorFragmentShader.frag  VertexShader2D.vert  VertexShader3D.vert  globe_class.cpp  globe_class.hpp  graphics_class.cpp  graphics_class.hpp  main.cpp  mapdata_class.cpp  mapdata_class.hpp  massif.out.1618  massif.out.5989  observer_class.cpp  observer_class.hpp  polska_mapy  polska_mapy2  polska_mapy_full  utils.hpp  wroclaw_3x4
zadanie5mapa/zadanie5mapa-build/: CMakeCache.txt  Makefile  cmake_install.cmake  zadanie5mapa  zadanie5mapa.cbp
zadanie5mapa/zadanie5mapa/maps/: .directory  n48e013.hgt  n48e014.hgt  n48e015.hgt  n48e016.hgt  n48e017.hgt  n48e018.hgt  n48e019.hgt  n48e020.hgt  n48e021.hgt  n48e022.hgt  n48e023.hgt  n48e024.hgt  n49e021.hgt  n49e022.hgt  n49e023.hgt  n49e024.hgt  n50e022.hgt  n50e023.hgt  n50e024.hgt  n51e015.hgt  n51e021.hgt  n51e022.hgt  n51e023.hgt  n51e024.hgt  n52e013.hgt  n52e014.hgt  n52e015.hgt  n52e016.hgt  n52e017.hgt  n52e018.hgt  n52e019.hgt  n52e020.hgt  n52e021.hgt  n52e022.hgt  n52e023.hgt  n52e024.hgt  n53e013.hgt  n53e014.hgt  n53e015.hgt  (+20 more)
zadanie6model/zadanie6model/: .directory  CMakeLists.txt  ColorFragmentShader.frag  DirtFragmentShader.frag  F16_FUBM.tga  F16_LAK.tga  F16_LINT.tga  F16_LS1.tga  F16_LTAI.tga  F16_RINT.tga  F16_RS1.tga  F16_RS2.tga  RUEDAF.tga  VertexShader.vert  WoodFragmentShader.frag  assimp_model.cpp  assimp_model.h  graphics_class.cpp  graphics_class.hpp  main.cpp  model.cpp  model.hpp  observer_class.cpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  utils.cpp  utils.hpp
zadanie6model/zadanie6model/include/assimp/: vector3.inl
